# Gmail_Project

./: .gitignore  Blacklist.h  BloomFilter.h  BloomFilterFactory.cpp  BloomFilterFactory.h  CMakeLists.txt  HashFunc.cpp  Iinitialize.cpp  MainLoop.cpp  README.md  URLChecker.h  Web_server.Dockerfile  check_tests.cpp  client.Dockerfile  client_frontend.Dockerfile  docker-compose.yml  dockerfile  mainloop.cpp  mainloop.h  makefile  server.Dockerfile  tests.Dockerfile
BlackList_server/: CMakeLists.txt  Dockerfile
BlackList_server/include/: BadRequest.h  CommandParser.h  ConfigParser.h  DeleteCommand.h  GetCommand.h  HashFunc.h  ICommand.h  MainLoop.h  MultiHash.h  MultiServer.h  PostCommand.h  ThreadPool.h
BlackList_server/src/: BadRequest.cpp  BloomFilter.cpp  CommandParser.cpp  ConfigParser.cpp  DeleteCommand.cpp  GetCommand.cpp  MainLoop.cpp  MultiHash.cpp  MultiServer.cpp  PostCommand.cpp  TCPServer.cpp  ThreadPool.cpp  ThreasPool.cpp  URLBlacklist.cpp  main.cpp  tcp_client.py
BlackList_server/tests/: BloomFilter_test.cpp  CommandParserTest.cpp  Command_test.cpp  ConfigParser_test.cpp  Delete_test.cpp  GetCmd_test.cpp  MainLoop_test.cpp  MultiHash_test.cpp  PostCommandTest.cpp  URLBlacklist_test.cpp  server_test.cpp
Web_server/: Dockerfile  app.js  package-lock.json  package.json  server.js
Web_server/controllers/: blacklistController.js  labelController.js  mailController.js  tokenController.js  tokensController.js  userController.js
Web_server/middlewares/: authMiddleware.js  upload.js
Web_server/models/: labelModel.js  mailModel.js  userModel.js  validator.js
Web_server/routes/: blacklistRoutes.js  labelRoutes.js  mailRoutes.js  tokenRoutes.js  tokensRoutes.js  userRoutes.js
Web_server/services/: blacklistService.js
android-app/: settings.gradle.kts
android_app/: .gitignore
backend_server/: package-lock.json  package.json
client/: package.json
src/: AddCommand.cpp  AddCommand.h  App.cpp  App.h  BadRequest.cpp  BadRequest.h  Blacklist.h  BloomFilter.cpp  BloomFilter.h  CheckCommand.cpp  CheckCommand.h  CommandParser.cpp  CommandParser.h  ConfigParser.cpp  ConfigParser.h  DeleteCommand.cpp  DeleteCommand.h  GetCommand.cpp  GetCommand.h  HashFunc.h  ICommand.h  Initialize.cpp  Initialize.h  MainLoop.cpp  MainLoop.h  MultiHash.cpp  MultiHash.h  PersistentManager.cpp  PersistentManager.h  PostCommand.cpp  PostCommand.h  TCPServer.cpp  TCPServer.h  ThreadPool.h  ThreasPool.cpp  URLBlacklist.cpp  URLBlacklist.h  URLChecker.cpp  URLChecker.h  a.out  (+9 more)
tests/: Add_test.cpp  BloomFilter_test.cpp  Check_test.cpp  CommandParserTest.cpp  Command_test.cpp  ConfigParser_test.cpp  Delete_test.cpp  GetCmd_test.cpp  Initialize_test.cpp  MainLoop_test.cpp  MultiHash_test.cpp  PostCommandTest.cpp  URLBlacklist_test.cpp  server_test.cpp
wiki/: 1-Setup-and-Run.md  2-Register-and-Login.md  3-Email-Actions.md
(+239 files in other folders)
